# ShurikenTactics

./: CMakeLists.txt  README.md
ShurikenTactics/: CMakeLists.txt
ShurikenTactics/src/: ShurikenTactics.cpp  ShurikenTactics.h
ShurikenTactics/src/Assets/: FontManager.cpp  FontManager.h  SoundManager.cpp  SoundManager.h  TextureManager.cpp  TextureManager.h
ShurikenTactics/src/Components/: Button.h  Collider.h  Components.h  Lifetime.h  Physics.h  Player.h  Renderable.h  Transform.h
ShurikenTactics/src/Core/: ComponentManager.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  StateManager.cpp  StateManager.h  SystemManager.h  Types.h  World.cpp  World.h
ShurikenTactics/src/States/: IState.h  MainMenuState.cpp  MainMenuState.h  PlayingState.cpp  PlayingState.h
ShurikenTactics/src/Systems/: ColliderSystem.cpp  ColliderSystem.h  ISystem.h  InputSystem.cpp  InputSystem.h  LifetimeSystem.cpp  LifetimeSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  UISystem.cpp  UISystem.h
